[project]
name = "mimiciii-sepsis-label-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ray (>=2.42.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.6.0,<3.0.0)",
    "dill (>=0.3.9,<0.4.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "lifelines (>=0.30.0,<0.31.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "matplotlib-venn (>=1.1.2,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "iisignature @ git+https://github.com/bottler/iisignature.git",
    "gdown (>=5.2.0,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false